--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-      <div class="container-fluid" style="background: url('/img/background.jpg'); background-repeat:repeat; width:100%; height: 350px; margin: 0">
+      <div class="container-fluid" style="background: url('/img/background.png'); background-repeat:repeat; width:100%; height: 350px; margin: 0">
         &nbsp;
       </div>
 
@@ -37,12 +37,12 @@
       <div class="row rowcontent">
         <div class="col-md-offset-1 col-md-4">
             <img src="/img/spinup.png" alt="SpinUp" /> <br/>
-            <p style="padding-left: 120px; margin-top:-60px;">creates....<br />
-                where... <br />
-                nia.</p>
+            <p style="padding-left: 120px; margin-top:-60px;">our mission<br />
+                vision <br />
+                or something else.</p>
         </div>
         <div class="col-md-offset-1 col-md-5">
-            <iframe src="http://www.youtube.com/embed/3YKdLRTh2rg" 
+            <iframe src="https://www.youtube.com/embed/MX7lW8t4Jxc" 
                 webkitallowfullscreen="true" 
                 mozallowfullscreen="true"
                 allowfullscreen="allowfullscreen"
@@ -54,13 +54,17 @@
         </div>
       </div>
 
-      <div class="row rowcontent" style="background-color: #0FBC71; color: white">
+      <div class="container-fluid" style="background: url('/img/programme.png'); background-repeat:repeat; width:70%; height: 550px; margin: 10">
+	    &nbsp;
+	  </div>
+
+      <div class="row rowcontent" style="background-color: #04b756; color: white">
         <div class="col-md-offset-1 col-md-4">
             <h1>Register your interest</h1>
-            <p>Provisional launch of the project: Autumn 2014.</p>
+            <p>Provisional launch of the first STEM weekend for A-level students in Manchester: November 2015.</p>
         </div>
         <div class="col-md-offset-1 col-md-5">
-            <form class="form-horizontal" role="form" action="https://docs.google.com/forms/d/18-vYsGIqkoHl3DbSfMrj7222bYQwSu5CfXu2Vf9Zlfw/formResponse" method="POST" >
+            <form class="form-horizontal" role="form" action="https://docs.google.com/spreadsheets/d/1p8JlW1T9lFtb9Gc0wDJCfnFEYnV8wcZKu-yM4z39jh8/formResponse" method="POST" >
               <div class="form-group">
                 <!-- <label for="name" class="col-sm-2 control-label">Name</label> -->
                 <div class="col-sm-10">
@@ -94,6 +98,20 @@
         </div>
       </div>
 
+      <div class="row rowcontent" style="background-color: #fad304; color: white">
+        <div class="col-md-offset-1 col-md-4">
+            <h1>Organisers</h1>
+            <p>Manchester and London.</p>
+        </div>
+      </div>
+
+      <div class="row rowcontent" style="background-color: #f70e29; color: white">
+        <div class="col-md-offset-1 col-md-4">
+            <h1>Supporters</h1>
+            <p>Manchester and London.</p>
+        </div>
+      </div>
+
       <div class="row rowcontent" style="background-color: #2B2B24; color: white; text-align: center;">
         <div class="col-md-offset-4 col-md-4">
             <h1 style="outline: 1px solid white;">Follow us:</h1>
@@ -111,7 +129,7 @@
         </div>
       </div>
       <footer>
-        <p>&copy; SpinUp 2014. Proudly created in Manchester.</p>
+        <p>&copy; Spin Up 2015</p>
       </footer>
     </div> <!-- /container -->
 
