--- a/thankyou.html
+++ b/thankyou.html
@@ -42,7 +42,7 @@
       </div>
       <hr>
       <footer>
-        <p>&copy; SpinUp 2014. Proudly created in Manchester.</p>
+        <p>&copy; Spin Up 2015. Proudly built by students for students.</p>
       </footer>
     </div> <!-- /container -->
 
