--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="We spin up A-level students interested in STEM subjects.">
+    <meta name="author" content="Spin Up">
     <link rel="shortcut icon" href="/img/favicon.ico">
 
     <title>Spin Up</title>
@@ -26,42 +26,72 @@
     <![endif]-->
   </head>
 
-  <body>
+  <!-- 
+  <body class="students" id="landing">
+	<nav>
+		<div class="container">
+			<ul class="nav-signin">
+				<li class="mobile-menu mobile-menu-close">
+					<img alt="Mobile menu close" src="/img/mobile-menu-close.svg" width="36">
+				</li>
+				<li class="mobile-menu mobile-menu-open">
+					<img alt="Mobile menu" src="/img/mobile-menu.svg" width="36">
+				</li>
+			</ul>
+			<ul class="nav-links">
+				<li>
+					<a href="https://www.spinup.co.uk/" target="_blank" class="logo">
+						<img alt="Logo Snapshot" src="/img/logo-snapshot.png" width="200">
+						<img alt="Logo" class="logo-mobile" src="./img/logo.svg" width="36">
+					</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+	<header>
+		<div class="container align-center">
+			<img alt="Snapshot Logo" class="ss-background" src="/img/head.svg">
+			<div class="ss-background-chart">
+				<img alt="Chart" src="img/chart.svg">
+			</div>
+		</div>
+	</header>
+	-->
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-      <div class="container-fluid" style="background: url('/img/background.png'); background-repeat:repeat; width:100%; height: 350px; margin: 0">
-        &nbsp;
-      </div>
-
-    <div class="container-fluid">
-      <div class="row rowcontent">
-        <div class="col-md-offset-1 col-md-4">
-            <img src="/img/spinup.png" alt="SpinUp" /> <br/>
-            <p style="padding-left: 120px; margin-top:-60px;">our mission<br />
-                vision <br />
-                or something else.</p>
-        </div>
-        <div class="col-md-offset-1 col-md-5">
-            <iframe src="https://www.youtube.com/embed/MX7lW8t4Jxc" 
-                webkitallowfullscreen="true" 
-                mozallowfullscreen="true"
-                allowfullscreen="allowfullscreen"
-                frameborder="0"
-                style="width: 100%"
-                height="390px">
-                
-            </iframe>
-        </div>
-      </div>
-
-      <div class="container-fluid" style="background: url('/img/programme.png'); background-repeat:repeat; width:70%; height: 550px; margin: 10">
-	    &nbsp;
-	  </div>
-
-      <div class="row rowcontent" style="background-color: #04b756; color: white">
+	<section id="intro">
+	 	<div class="row rowcontent" style="background-color: #dcf2fc; color: #535b6c; text-align: left;">
+	      <div class="row rowcontent">
+	        <div class="col-md-offset-1 col-md-4">
+	            <img src="/img/logo-snapshot.png" alt="SpinUp" /> <br/>
+	            <p style="padding-left: 120px; margin-top:-60px;">We spin up A-level students<br/>
+	                interested in STEM subjects.</p>
+	        </div>
+	    </div>
+	</section>
+	<section id="about">
+		<br>&nbsp;<br>
+      	<div class="row rowcontent" style="background-color: white; color: #535b6c">
+       		 <div class="col-md-offset-1 col-md-4">
+				<h1>Why we exists</h1>
+					<p class="philosophy">
+						Something
+					</p>
+			</div>
+			<div class="col-md-offset-1 col-md-5">
+				<h1>What we do</h1>
+					<p class="philosophy">
+						Something
+					</p>
+			</div>
+		</div>
+		<br>&nbsp;<br>
+	</section>
+	<hr>
+	<section id="interest">
+      <div class="row rowcontent" style="background-color: white; color: #535b6c">
         <div class="col-md-offset-1 col-md-4">
             <h1>Register your interest</h1>
-            <p>Provisional launch of the first STEM weekend for A-level students in Manchester: November 2015.</p>
+            <p>Provisional launch of the first Spin Up weekend for<br/>A-level students in Manchester: November 2015.</p>
         </div>
         <div class="col-md-offset-1 col-md-5">
             <form class="form-horizontal" role="form" action="https://docs.google.com/spreadsheets/d/1p8JlW1T9lFtb9Gc0wDJCfnFEYnV8wcZKu-yM4z39jh8/formResponse" method="POST" >
@@ -97,24 +127,75 @@
             </form>
         </div>
       </div>
-
-      <div class="row rowcontent" style="background-color: #fad304; color: white">
-        <div class="col-md-offset-1 col-md-4">
-            <h1>Organisers</h1>
-            <p>Manchester and London.</p>
-        </div>
-      </div>
-
-      <div class="row rowcontent" style="background-color: #f70e29; color: white">
-        <div class="col-md-offset-1 col-md-4">
-            <h1>Supporters</h1>
-            <p>Manchester and London.</p>
-        </div>
-      </div>
-
-      <div class="row rowcontent" style="background-color: #2B2B24; color: white; text-align: center;">
+	</section>
+	<hr>
+	<section id="organisers">
+		<div class="container align-center" style="background-color: white; color: #535b6c">
+			<h1>Built by students for students</h1>
+			<br>&nbsp;<br>
+			<div class="row">
+				<div class="col-sm-2 spacing-xs align-xs-left">
+					<img alt="Portrait of Test Test" src="/img/portrait.png" style="width: 50%; height: 50%">
+					<p>
+						“I can say something here.”
+					</p>
+					<p class="quote">
+						Human being, Manchester
+					</p>
+				</div>
+				<div class="col-sm-2 spacing-xs align-xs-left">
+					<img alt="Portrait of Test Test" src="/img/portrait.png" style="width: 50%; height: 50%">
+					<p>
+						“I can say something here.”
+					</p>
+					<p class="quote">
+						Human being, Manchester
+					</p>
+				</div>
+				<div class="col-sm-2 spacing-xs align-xs-left">
+					<img alt="Portrait of Test Test" src="/img/portrait.png" style="width: 50%; height: 50%">
+					<p>
+						“I can say something here.”
+					</p>
+					<p class="quote">
+						Human being, Manchester
+					</p>
+				</div>
+				<div class="col-sm-2 spacing-xs align-xs-left">
+					<img alt="Portrait of Test Test" src="/img/portrait.png" style="width: 50%; height: 50%">
+					<p>
+						“I can say something here.”
+					</p>
+					<p class="quote">
+						Human being, Manchester
+					</p>
+				</div>
+				<div class="col-sm-2 spacing-xs align-xs-left">
+					<img alt="Portrait of Test Test" src="/img/portrait.png" style="width: 50%; height: 50%">
+					<p>
+						“I can say something here.”
+					</p>
+					<p class="quote">
+						Human being, Manchester
+					</p>
+				</div>
+				<div class="col-sm-2 spacing-xs align-xs-left">
+					<img alt="Portrait of Test Test" src="/img/portrait.png" style="width: 50%; height: 50%">
+					<p>
+						“I can say something here.”
+					</p>
+					<p class="quote">
+						Human being, Manchester
+					</p>
+				</div>
+			</div>
+		</div>
+		<br>&nbsp;<br>
+	</section>
+   	<section id="follow">
+      <div class="row rowcontent" style="background-color: #dcf2fc; color: #535b6c; text-align: center;">
         <div class="col-md-offset-4 col-md-4">
-            <h1 style="outline: 1px solid white;">Follow us:</h1>
+            <h1 style="outline: 1px solid #535b6c;">Follow us:</h1>
             <div class="row" style="padding-top: 20px;">
                 <div class="col-sm-4">
                     <a href="https://www.facebook.com/SpinUpTogether"><img src="/img/facebook.png" alt="facebook" /></a>
@@ -128,8 +209,11 @@
             </div>
         </div>
       </div>
+	</section>
       <footer>
-        <p>&copy; Spin Up 2015</p>
+      	<div class="col-sm-4 spacing-xs align-xs-left">
+        	<p>	&copy; Spin Up 2015</p>
+        </div>
       </footer>
     </div> <!-- /container -->
 
