--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	 	<div class="row rowcontent" style="background-color: #dcf2fc; color: #535b6c; text-align: left;">
 	      <div class="row rowcontent">
 	        <div class="col-md-offset-1 col-md-4">
-	            <img src="/img/logo-snapshot.png" alt="SpinUp" /> <br/>
+	            <img src="/img/logo.png" alt="SpinUp" /> <br/>
 	            <p style="padding-left: 120px; margin-top:-60px;">We spin up A-level students<br/>
 	                interested in STEM subjects.</p>
 	        </div>
