--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 	<hr>
 	<section id="organisers">
 		<div class="container align-center" style="background-color: white; color: #535b6c">
-			<h1>Built by students for students</h1>
+			<h1>Created by students for students</h1>
 			<br>&nbsp;<br>
 			<div class="row">
 				<div class="col-sm-2 spacing-xs align-xs-left">
