--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
    	<section id="follow">
       <div class="row rowcontent" style="background-color: #dcf2fc; color: #535b6c; text-align: center;">
         <div class="col-md-offset-4 col-md-4">
-            <h1 style="outline: 1px solid #535b6c;">Follow us:</h1>
+            <h1>Follow us:</h1>
             <div class="row" style="padding-top: 20px;">
                 <div class="col-sm-4">
                     <a href="https://www.facebook.com/SpinUpTogether"><img src="/img/facebook.png" alt="facebook" /></a>
