--- a/index.html
+++ b/index.html
@@ -76,10 +76,14 @@
 					</p>
 			</div>
 			<div class="col-md-6">
-				<h1>What we do</h1>
-					<p class="philosophy">
-						Something
-					</p>
+				<h1>Our news feed</h1>
+					<a class="twitter-timeline" 
+						href="https://twitter.com/spinuptogether" 
+						data-widget-id="639919175964717056"
+						data-chrome="noheader nofooter noborders">
+						Tweets by @spinuptogether
+					</a>
+					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 			</div>
 		</div>
 		<br>&nbsp;<br>
@@ -87,11 +91,14 @@
 	<hr>
 	<section id="interest">
       <div class="row content" style="background-color: white; color: #535b6c; text-align: center;">
+		<div class="col-md-6">
+			<h1>Something</h1>
+		</div>
         <div class="col-md-6">
-            <h1>Register your interest</h1>
-            <p>Provisional launch of the first Spin Up weekend<br>for A-level students in Manchester: November 2015.</p>
-        </div>
-        <div class="col-md-6">
+            <div class="form-intro">
+	            <h1>Register your interest</h1>
+	            <p>Provisional launch of the first Spin Up weekend<br>for A-level students in Manchester: November 2015.</p>
+        	</div>
         	<div class="form-interest">
 	            <form class="form-horizontal" role="form" action="https://docs.google.com/forms/d/1YBIINen7CgYN_8eFuLIKQ-CWOhLbQPX8vfSiSQyWFUw/formResponse" method="POST" >
 	              <div class="form-group">
