--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
       <div class="row content" style="background-color: white; color: #535b6c; text-align: center;">
 		<div class="col-md-6">
 			<h1>Something</h1>
+			<p>Colourful advert.</p>
 		</div>
         <div class="col-md-6">
             <div class="form-intro">
