--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 	-->
 
 	<section id="intro">
-      <div class="row" style="background-color: #dcf2fc; color: #535b6c; text-align: center;">
+      <div class="row" style="background-color: #dcf2fc; color: #464646; text-align: center;">
 	            <img src="/img/logo.png" alt="SpinUp" /> <br/>
 	    </div>
 	</section>
 	<section id="about">
 		<br>&nbsp;<br>
-      	<div class="row content" style="background-color: white; color: #535b6c; text-align: center;">
+      	<div class="row content" style="background-color: white; color: #464646; text-align: center;">
        		 <div class="col-md-6">
 				<h1>Why we exist</h1>
 					<p class="philosophy">
@@ -90,7 +90,7 @@
 	</section>
 	<hr>
 	<section id="interest">
-      <div class="row content" style="background-color: white; color: #535b6c; text-align: center;">
+      <div class="row content" style="background-color: white; color: #464646; text-align: center;">
 		<div class="col-md-6">
 			<h1>Something</h1>
 			<p>Colourful advert.</p>
@@ -138,7 +138,7 @@
 	</section>
 	<hr>
 	<section id="organisers">
-		<div class="container align-center" style="background-color: white; color: #535b6c; text-align: center;">
+		<div class="container align-center" style="background-color: white; color: #464646; text-align: center;">
 			<h1>Created by students for students</h1>
 			<br>&nbsp;<br>
 			<div class="row">
@@ -183,7 +183,7 @@
 		<br>&nbsp;<br>
 	</section>
    	<section id="follow">
-      <div class="row content" style="background-color: #dcf2fc; color: #535b6c; text-align: center; padding-bottom: 50px;">
+      <div class="row content" style="background-color: #dcf2fc; color: #464646; text-align: center; padding-bottom: 50px;">
         <div class="col-md-offset-4 col-md-4">
             <h1>Follow us:</h1>
             <div class="row" style="padding-top: 20px;">
