--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="overflow-x: hidden">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -90,15 +90,17 @@
 	</section>
 	<hr>
 	<section id="interest">
-      <div class="row content" style="background-color: white; color: #464646; text-align: center;">
-		<div class="col-md-6">
-			<h1>Something</h1>
-			<p>Colourful advert.</p>
+      <div class="row content" style="background-color: white; color: #464646; text-align: center">
+		<div class="col-md-5">
+			<img alt="Weekend advert" src="/img/weekend.png" style="width: 80%; height: 80%">
 		</div>
-        <div class="col-md-6">
+		<div class="col-md-2">
+			<img alt="Weekend advert" src="/img/arrow.jpg" style="width: 80%; height: 80%">
+		</div>
+        <div class="col-md-5">
             <div class="form-intro">
 	            <h1>Register your interest</h1>
-	            <p>Provisional launch of the first Spin Up weekend<br>for A-level students in Manchester: November 2015.</p>
+	            <br>&nbsp;<br>
         	</div>
         	<div class="form-interest">
 	            <form class="form-horizontal" role="form" action="https://docs.google.com/forms/d/1YBIINen7CgYN_8eFuLIKQ-CWOhLbQPX8vfSiSQyWFUw/formResponse" method="POST" >
@@ -128,7 +130,7 @@
 	              </div>
 	              <div class="form-group">
 	                <div class="col-sm-12">
-	                  <button type="button"  onclick="postContactToGoogle()" class="btn btn-default">Send</button>
+	                  <button type="button"  onclick="postContactToGoogle()" class="btn btn-default" style="color: #464646">Send</button>
 	                </div>
 	              </div>
 	            </form>
@@ -188,13 +190,13 @@
             <h1>Follow us:</h1>
             <div class="row" style="padding-top: 20px;">
                 <div class="col-sm-4">
-                    <a href="https://www.facebook.com/SpinUpTogether"><img src="/img/facebook.png" alt="facebook" /></a>
+                    <a target="_blank" href="https://www.facebook.com/SpinUpTogether"><img src="/img/facebook.png" alt="facebook" /></a>
                 </div>
                 <div class="col-sm-4">
-                    <a href="https://twitter.com/spinuptogether"><img src="/img/twitter.png" alt="twitter" /></a>
+                    <a target="_blank" href="https://twitter.com/spinuptogether"><img src="/img/twitter.png" alt="twitter" /></a>
                 </div>
                 <div class="col-sm-4">
-                    <a href="https://plus.google.com/u/0/103175615369993971008/posts/p/pub"><img src="/img/gplus.png" alt="google+" /></a>
+                    <a target="_blank" href="https://plus.google.com/u/0/103175615369993971008/posts/p/pub"><img src="/img/gplus.png" alt="google+" /></a>
                 </div>
             </div>
         </div>
