--- a/error.html
+++ b/error.html
@@ -31,8 +31,8 @@
 
     <div class="container-fluid" 
          style="color: #464646;">
-         <h1>Thank you!</h1>
-         <p>We will get in touch with you soon.</p>
+         <h1>Something went wrong!</h1>
+         <p>Please try again later or contact us via info@spinup.co.uk.</p>
          <footer>
             <p>&copy; Spin Up 2015</p>
          </footer>
