--- a/index.html
+++ b/index.html
@@ -125,12 +125,8 @@
 				              <div class="form-group">
 				                <!-- <label for="subject" class="col-sm-2 control-label">Message</label> -->
 				                <div class="col-sm-12">
-				                	<textarea class="form-control" 
-				                			  rows="3" 
-				                			  id="message" 
-				                			  name="entry.451889630" 
-				                			  placeholder="Message">
-				                	</textarea> 
+				                	<!-- <textarea> opening and closing must be in one line -->
+				                	<textarea class="form-control" rows="3" id="message" name="entry.451889630" placeholder="Message"></textarea> 
 				                </div>
 				              </div>
 				              <div class="form-group">
